@@ -1,3 +1,6 @@
+2008-06-16  Noam Lampert  <noaml@mainsoft.com>
+
+	* HttpContext.cs: improve support for RewritePath
 
 2008-05-19 Noam Lampert <noaml@mainsoft.com>
 
